<resources>
    <string name="app_name">PlantDoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plantdoctor">PlantDoctor</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="register">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="authentication">Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="plantdoc">Plantdoc</string>
    <string name="others">Others</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="farmers">Farmers</string>
    <string name="splash">splash</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">image</string>
    <string name="predict">predict</string>

    <!--Slides-->
    <string name="first_slide">Plant Doc</string>
    <string name="second_slide">Scan Leaf</string>
    <string name="third_slide">Upload Image</string>

    <!--Buttons-->
    <string name="skipbtn">Skip</string>
    <string name="nextbtn">Next</string>
    <string name="get_started">Lets Get Started</string>
    <string name="getting_started">Create Account</string>
    <string name="remember_me">Remember me</string>
    <string name="detectable_diseases">Detectable Diseases</string>
    <string name="_4">4</string>
    <string name="fab">fab</string>
    <string name="no_notification">No Notification</string>
    <string name="dash_image">dash_image</string>
    <string name="previewimage">previewImage</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="supported_diseases">Supported Diseases</string>
    <string name="password_reset">Password Reset</string>

    <!--Description-->

</resources>