<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_location"
            android:title="@string/farmers"/>

    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:title="@string/settings"
                android:icon="@drawable/ic_settings"
                android:id="@+id/loginFragment"/>
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/registerFragment"
                android:title="@string/profile"
                android:icon="@drawable/ic_account"/>
            <item
                android:id="@+id/ab"
                android:title="About"
                android:icon="@drawable/ic_home"
                />
        </menu>
    </item>
</menu>