<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.others.SelectFragment">


    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/btnCamera"
        android:text="@string/camera"
        android:layout_margin="10dp"
        android:layout_below="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/btnCamera"
        android:text="@string/gallery"
        android:layout_below="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnPredict"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/btnGallery"
        android:text="@string/predict"
        android:layout_below="@+id/previewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_results"
        android:layout_below="@+id/btnPredict"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>