<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:src="@drawable/img"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dash_image"/>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:text="@string/register"
        android:backgroundTint="@color/green"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_in"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>