<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.RegisterFragment">
    <TextView
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="75dp"
        android:textColor="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_centerInParent="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_layout"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_text"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:hint="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/register_btn"
        android:layout_below="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:backgroundTint="@color/teal_200"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_below="@+id/register_btn"
        android:gravity="center_horizontal"
        android:id="@+id/signin_tv"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@+id/signin_tv"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />
</RelativeLayout>